--- a/conference-ticket-generator-main/style.css
+++ b/conference-ticket-generator-main/style.css
@@ -217,9 +217,58 @@ input.valid {
 
 .ticketImage {
     justify-self: center;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
+.ticketContainer {
+    justify-self: center;
+    position: relative;
+    height: 200px;
+    width: 300px;
+}
 
-/* .ticketImage.invalid {
-    display: none;
-} */
+.overlayImage1 {
+    position: absolute;
+    top: 20px;
+    left: -140px;
+    object-fit: cover;
+    z-index: 2;
+}
+
+.overlayParagraph {
+    position: absolute;
+    color: white;
+    font-family: 'inconsolata_regular', Open Sans;
+    bottom: 100px;
+    left: -93px;
+}
+
+.overlay-image {
+    position: absolute;
+    bottom: -40px;
+    left: -135px;
+    height: 90px;
+    width: 90px;
+}
+
+.user-fullname {
+    color: white;
+    font-family: 'inconsolata_bold', Afacad;
+    font-size: 25px;
+}
+
+.github-container {
+    display: flex;
+}
+
+.user-github {
+    color: white;
+    font-family: 'inconsolata_regular', Open Sans;
+}
+
+.user-details {
+    position: absolute;
+    bottom: -43px;
+}
